Creating the Main Page Content # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   public/css/site.css #	modified:   public/css/site.styl #	modified:   server/includes/layout.html #	modified:   server/includes/layout.jade #	modified:   server/views/index.html #	modified:   server/views/index.jade #

--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Multivision
+        title MultiVision
         link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/vendor/toastr/toastr.css")
@@ -9,4 +9,3 @@ html
     body(ng-app='app')
         block main-content
         include scripts
-
