--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -1,8 +1,15 @@
-.navbar-right(ng-controller="mvNavBarLoginCtrl")
-    form.navbar-form(ng-hide="identity.isAuthenticated()")
+.navbar-right(data-ng-controller="mvNavBarLoginCtrl")
+    form.navbar-form(data-ng-hide="identity.isAuthenticated()")
         .form-group
             input.form-control(placeholder="Email", ng-model="username")
         .form-group
             input.form-control(type="password", placeholder="Password", ng-model="password")
         button.btn.btn-primary(ng-click="signin(username, password)") Sign In
-
+    ul.nav.navbar-nav.navbar-right(data-ng-show="identity.isAuthenticated()")
+        li.dropdown
+            a.dropdown-toggle(href="", data-toggle="dropdown")
+                | {{identity.currentUser.firstName + " " + identity.currentUser.lastName}}
+                b.caret
+            ul.dropdown-menu
+                li
+                    a(href="", data-ng-click="signout()") Sign Out
