--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -11,5 +11,7 @@
                 | {{identity.currentUser.firstName + " " + identity.currentUser.lastName}}
                 b.caret
             ul.dropdown-menu
+                li(data-ng-show="identity.currentUser.isAdmin()")
+                    a(href="/admin/users") User Admin
                 li
                     a(href="", data-ng-click="signout()") Sign Out
