--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -1,5 +1,8 @@
 .navbar-right(data-ng-controller="mvNavBarLoginCtrl")
     form.navbar-form(data-ng-hide="identity.isAuthenticated()")
+        ul.nav.navbar-nav
+            li
+                a(href="/signup") Sign up
         .form-group
             input.form-control(placeholder="Email", ng-model="username")
         .form-group
