--- a/public/app/account/signup.jade
+++ b/public/app/account/signup.jade
@@ -1,4 +1,4 @@
-.container
+.container(data-ng-controller="mvSignupCtrl as vm")
     .well
         form.form-horizontal(name="signupForm")
             fieldset
@@ -6,22 +6,22 @@
                 .form-group
                     label.col-md-2.control-label(for="email") Email
                     .col-md-10
-                        input.form-control(name="email", type="email", placeholder="Email", data-ng-model="email", required)
+                        input.form-control(name="email", type="email", placeholder="Email", data-ng-model="vm.email", required)
                 .form-group
                     label.col-md-2.control-label(for="password") Password
                     .col-md-10
-                        input.form-control(name="password", type="password", placeholder="Password", data-ng-model="password", required)
+                        input.form-control(name="password", type="password", placeholder="Password", data-ng-model="vm.password", required)
                 .form-group
                     label.col-md-2.control-label(for="fname") First Name
                     .col-md-10
-                        input.form-control(name="fname", type="text", placeholder="First Name", data-ng-model="fname", required)
+                        input.form-control(name="fname", type="text", placeholder="First Name", data-ng-model="vm.fname", required)
                 .form-group
                     label.col-md-2.control-label(for="lname") Last Name
                     .col-md-10
-                        input.form-control(name="lname", type="text", placeholder="Last Name", data-ng-model="lname", required)
+                        input.form-control(name="lname", type="text", placeholder="Last Name", data-ng-model="vm.lname", required)
                 .form-group
                     .col-md-10.col-md-offset-2
                         .pull-right
-                            button.btn.btn-primary(data-ng-click="signup()", data-ng-disabled="signupForm.$invalid") Submit
+                            button.btn.btn-primary(data-ng-click="vm.signup()", data-ng-disabled="signupForm.$invalid") Submit
                             | &nbsp;
                             a.btn.btn-default(href="/") Cancel
