--- a/public/app/main/main.jade
+++ b/public/app/main/main.jade
@@ -1,10 +1,10 @@
-.container
+.container(data-ng-controller="mvMainCtrl as mv")
     .jumbotron
         h1 MultiVision
         p Welcome to MultiVision! The most comprehensive and complete collection of extreme tech training videos on the web.
 
     .row
         .col-md-6
-            div(ng-include="'/partials/main/featured-courses'")
+            div(data-ng-include="'/partials/main/featured-courses'")
         .col-md-6
-            div(ng-include="'/partials/main/new-courses'")
+            div(data-ng-include="'/partials/main/new-courses'")
