--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -9,8 +9,8 @@ block main-content
                 ul.nav.navbar-nav
                     li
                         a(href="/") Home
-                div(ng-include="'/partials/account/navbar-login'")
+                div(data-ng-include="'/partials/account/navbar-login'")
     section.content
-        div(ng-view)
+        div(data-ng-view)
     footer.container.text-center
         p &copy; 2013 MultiVision Corp International Ltd.
