User profile - Updating data

--- a/public/app/account/navbar-login.jade
+++ b/public/app/account/navbar-login.jade
@@ -17,4 +17,6 @@
                 li(data-ng-show="vm.identity.currentUser.isAdmin()")
                     a(href="/admin/users") User Admin
                 li
+                    a(href="/profile") Profile
+                li
                     a(href="", data-ng-click="vm.signout()") Sign Out
