--- a/public/app/main/featured-courses.jade
+++ b/public/app/main/featured-courses.jade
@@ -1,5 +1,5 @@
 .panel.panel-primary
     .panel-heading.text-center Featured Courses
     .panel-body
-        .row(ng-repeat="course in mv.courses | filter:{featured:true}")
-            .col-md-12 {{course.name}}
+        .row(data-ng-repeat="course in mv.courses | filter:{featured:true}")
+            .col-md-12 {{course.title}}
