--- a/public/app/main/new-courses.jade
+++ b/public/app/main/new-courses.jade
@@ -1,6 +1,6 @@
 .panel.panel-primary
     .panel-heading.text-center New Courses
     .panel-body
-        .row(ng-repeat="course in mv.courses | orderBy:'published':true | limitTo:10")
+        .row(data-ng-repeat="course in mv.courses | orderBy:'published':true | limitTo:10")
             .col-md-3 {{course.published | date:'MMM d'}}
-            .col-md-9 {{course.name}}
+            .col-md-9 {{course.title}}
