--- a/public/app/main/featured-courses.jade
+++ b/public/app/main/featured-courses.jade
@@ -2,4 +2,5 @@
     .panel-heading.text-center Featured Courses
     .panel-body
         .row(data-ng-repeat="course in mv.courses | filter:{featured:true}")
-            .col-md-12 {{course.title}}
+            .col-md-12
+                a(href="/courses/{{course._id}}") {{course.title}}
