--- a/public/app/main/new-courses.jade
+++ b/public/app/main/new-courses.jade
@@ -3,4 +3,5 @@
     .panel-body
         .row(data-ng-repeat="course in mv.courses | orderBy:'published':true | limitTo:10")
             .col-md-3 {{course.published | date:'MMM d'}}
-            .col-md-9 {{course.title}}
+            .col-md-9
+                a(href="/courses/{{course._id}}") {{course.title}}
